--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
+
+<div class="row">
+  <div class="span8">
+	<% if @user.questions.any? %>
+	  <h3>Questions (<%= @user.questions.count %>)</h3>
+	  <ol class="questions">
+	    <%= render @questions %>
+	  </ol>
+	  <%= will_paginate @questions %>
+	<% end %>
+  </div>
+</div>
