--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <span class="content"><%= question.content %></span>
+  <span class="content"><%= link_to question.title, question %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(question.created_at) %> ago.
   </span>
