--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= @user.name %></h1>
 
 <div class="row">
-  <div class="span8">
+  <div class="span">
 	<% if @user.questions.any? %>
 	  <h3>Questions (<%= @user.questions.count %>)</h3>
 	  <ol class="questions">
