--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,6 +144,19 @@ input {
     border-top: 1px solid #e8e8e8;
   }
 }
+
+/* answers */
+
+.answers {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
 .content {
   display: block;
 }
