--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,11 +2,32 @@
 <h1><%= @question.title %></h1>
 
 <div class="row">
-  <div class="span">
+  <div class="span12">
+	
 	<p><%= simple_format(@question.content) %></p>
 	<p>
-		<%= link_to @question.user.name, @question.user %> 
-		asked <%= time_ago_in_words(@question.created_at) %> ago.
+	  <%= link_to @question.user.name, @question.user %> 
+	  asked <%= time_ago_in_words(@question.created_at) %> ago.
 	</p>
+	
+	<% if @question.answers.any? %>
+	  <h3><%= pluralize(@question.answers.count, "Answer") %></h3>
+	  <ol class="answers">
+	    <%= render @answers, content: true %>
+	  </ol>
+	  <%= will_paginate @answers %>
+	<% end %>
+
+    <% if signed_in? %>
+	  <%= form_for(@answer) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+
+        <%= f.hidden_field :question_id, :value => @question.id %> 
+        <%= f.text_area :content, placeholder: "Answer this question..." %>
+
+        <%= f.submit "Answer", class: "btn btn-large btn-primary" %>
+      <% end %>
+    <% end %>
+
   </div>
 </div>
