--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,23 @@
 <h1><%= @user.name %></h1>
 
 <div class="row">
-  <div class="span">
+  <div class="span6">
 	<% if @user.questions.any? %>
 	  <h3>Questions (<%= @user.questions.count %>)</h3>
 	  <ol class="questions">
 	    <%= render @questions %>
 	  </ol>
 	  <%= will_paginate @questions %>
+	<% end %>
+  </div>
+
+  <div class="span6">
+	<% if @user.answers.any? %>
+	  <h3>Answers (<%= @user.answers.count %>)</h3>
+	  <ol class="answers">
+	    <%= render @answers, title: true %>
+	  </ol>
+	  <%= will_paginate @answers %>
 	<% end %>
   </div>
 </div>
