--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,6 +1,9 @@
 <li>
   <span class="content"><%= link_to question.title, question %></span>
+  <span class="content">
+  	<%= pluralize(question.answers.count, 'answer') %>
+  </span>
   <span class="timestamp">
-    Posted <%= time_ago_in_words(question.created_at) %> ago.
+    posted <%= time_ago_in_words(question.created_at) %> ago.
   </span>
 </li>
