--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,5 +1,5 @@
 <% # Usage: render @answers, bool title, bool content, bool user %>
-<% # E.g. : render @answers, title: true                         %>
+<% # E.g. : render @answers, user: true                          %>
 
 <li>
   <span class="content">
