--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -10,6 +10,8 @@
 
       <%= f.text_area :content, placeholder: "Ask a question..." %>
 
+      <%= f.text_field :tag_list, placeholder: "Hashtags" %>
+
       <%= f.submit "Ask!", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
