--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,9 +1,17 @@
+<% # Usage: render @questions, bool user  %>
+<% # E.g. : render @questions, user: true %>
+
 <li>
-  <span class="content"><%= link_to question.title, question %></span>
   <span class="content">
+    <%= link_to question.title, question %>
+    <br>
+    <strong>Hashtags: </strong>
+    <%= raw question.tag_list.map { |t| link_to "##{t}", tag_path(t) }.join(' ') %>
+    <br>
   	<%= pluralize(question.answers.count, 'answer') %>
   </span>
   <span class="timestamp">
+    <%= link_to question.user.name, user_path(question.user) if defined? user %>
     posted <%= time_ago_in_words(question.created_at) %> ago.
   </span>
 </li>
