--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,6 +7,10 @@
 	<div class="well">
 	  <p><%= simple_format(@question.content) %></p>
 	  <p>
+	    <strong>Hashtags: </strong>
+	    <%= raw @question.tag_list.map { |t| link_to "##{t}", tag_path(t) }.join(' ') %>
+	  </p>
+	  <p>
 	    <%= link_to @question.user.name, @question.user %> 
 	    asked <%= time_ago_in_words(@question.created_at) %> ago.
 	  </p>
