--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,10 @@
 <% provide(:title, @user.name) %>
 <h1><%= @user.name %></h1>
+<h4>
+  Reputation: <%= link_to @user.reputation, '#' %>
+  <br><br>
+  Votes Cast: <%= link_to @user.votes_cast, '#' %>
+</h4>
 
 <div class="row">
   <div class="span6">
