--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -15,7 +15,7 @@
   </span>
   <span class="timestamp">
     <%= link_to question.user.name, user_path(question.user) if defined? user %>
-    posted <%= time_ago_in_words(question.created_at) %> ago.
+    asked <%= time_ago_in_words(question.created_at) %> ago.
     | <%= pluralize question.reputation_for(:votes).to_i, "vote" %>
   </span>
 </li>
