--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,13 +3,22 @@
 <% end %>
 
 <div class="row">
-  <div class="span12">
+  <div class="span6">
 	<% if @questions.any? %>
-	  <h3>Questions (<%= @questions.count %>)</h3>
+	  <h3>Recent Questions</h3>
 	  <ol class="questions">
 	    <%= render @questions, user: true %>
 	  </ol>
 	  <%= will_paginate @questions %>
+	<% end %>
+  </div>
+  <div class="span6">
+	<% if @users.any? %>
+	  <h3>Reputation Rankings</h3>
+	  <ol class="users">
+	    <%= render @users %>
+	  </ol>
+	  <%= will_paginate @users %>
 	<% end %>
   </div>
 </div>
