--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -15,9 +15,26 @@
     <%= link_to answer.user.name, answer.user if defined? user %>
     answered <%= time_ago_in_words(answer.created_at) %> ago.
     | <%= pluralize answer.reputation_for(:votes).to_i, "vote" %>
+
+    <!-- Display voting buttons. -->
     <% if signed_in? && defined?(vote) && !current_user?(answer.user) %>
-      | <%= link_to "up", vote_answer_path(answer, type: "up"), method: "post" %>
-      | <%= link_to "down", vote_answer_path(answer, type: "down"), method: "post" %>
+
+      <!-- Bold user vote. -->
+      <% eval = answer.evaluations.where(reputation_name: :votes,
+                                         target_id: answer.id).first %>
+      <% if eval.present? && eval.value > 0 %>
+        <strong>
+      <% end %>
+      | <%= link_to "up",
+                    vote_answer_path(answer, type: "up"),
+                    method: "post" %></strong>
+      <% if eval.present? && eval.value < 0 %>
+        <strong>
+      <% end %>
+      | <%= link_to "down",
+                    vote_answer_path(answer, type: "down"),
+                    method: "post" %></strong>
     <% end %>
+
   </span>
 </li>
