--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -42,6 +42,7 @@
   <!-- Display edit and delete buttons. -->
   <% if current_user?(answer.user) %>
     | <%= link_to "edit", '#' %>
-    | <%= link_to "delete", answer, method: :delete, data: { confirm: "Are you sure?" } %>
+    | <%= link_to "delete", '#' %>
+    <!--answer, method: :delete, data: { confirm: "Are you sure?" }-->
   <% end %>
 </li>
