--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,6 @@
       <%= render 'layouts/footer' %> 
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <%= render 'layouts/ga' if Rails.env.production? %>
   </body>
 </html>
