--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,9 @@
       <%= link_to APP_CONFIG['site_name'], root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
+          <%= form_tag questions_path, { method: 'get', class: "navbar-form pull-left" } do %>
+            <%= text_field_tag :search, params[:search], class: "search-query", placeholder: 'Search' %>
+          <% end %>
           <% if signed_in? %>
             <li><%= link_to "Ask A Question", ask_path %></li>
             <li id="fat-menu" class="dropdown">
